# pthreadpool

./: BUILD.bazel  CMakeLists.txt  MODULE.bazel  WORKSPACE
.github/workflows/: build.yml
cmake/: DownloadCpuinfo.cmake  DownloadGoogleTest.cmake
include/: pthreadpool.h
src/: fastpath.c  gcd.c  legacy-api.c  memory.c  portable-api.c  pthreads.c  shim.c  threadpool-atomics.h  threadpool-common.h  threadpool-object.h  threadpool-utils.h  windows.c
test/: pthreadpool-cxx.cc  pthreadpool.cc  pthreadpool_v2.cc
